--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,9 @@ body, html {
 #container2 {
     background-color: white;
     position: absolute;
-    top: 70%;
+    top: 100%;
     left: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -90%);
     padding: 10px;
     text-align: center;
     padding-right: 50px;
@@ -50,8 +50,7 @@ body, html {
     border: thin solid black;
     padding: 15px;
     margin-bottom: 10px;
-    padding-right: 75px;
-    padding-left: 75px;
+    width: 250px;
 }
 
 #gridContainer {
