--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body, html {
 
 #container1 {
     background-color: white;
-    position: absolute;
+    position: relative;
     top: 5%;
     left: 50%;
     transform: translate(-50%, -20%);
@@ -17,7 +17,7 @@ body, html {
 
 #container2 {
     background-color: white;
-    position: absolute;
+    position: relative;
     top: 100%;
     left: 50%;
     transform: translate(-50%, -100%);
