--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,18 @@ body, html {
 
 #container1 {
     background-color: white;
-    position: relative;
-    top: 5%;
+    position: absolute;
     left: 50%;
-    transform: translate(-50%, -20%);
+    transform: translate(-50%, -10%);
     padding: 10px;
     text-align: center;
     width: 80vw;
-    height: 20vw;
 }
 
 #container2 {
     background-color: white;
-    position: relative;
-    top: 60%;
+    position: absolute;
+    top: 100%;
     left: 50%;
     transform: translate(-50%, -100%);
     padding: 10px;
@@ -68,7 +66,7 @@ body, html {
     padding: 20px;
     text-align: center;
     border: thin solid black;
-    height: 4vw;
+    height: 3vw;
     display: flex; 
     justify-content: center; 
     align-items: center; 
