--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body, html {
     font-weight: bold;
     border: thin solid black;
     color: black;
-    font-size: 1.3vw;
+    font-size: 20px;
 }
 
 #shuffleButton  {
