--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body, html {
 #container1 {
     background-color: white;
     position: absolute;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -10%);
     padding: 10px;
