--- a/styles.css
+++ b/styles.css
@@ -4,41 +4,40 @@ body, html {
     height: 100%;
 }
 
+#mainContainer {
+    width: 90%;
+    height: 80%;
+    margin: 10% auto;
+    display: flex;
+    flex-direction: column;
+}
+
 #container1 {
     background-color: white;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -10%);
     padding: 10px;
     text-align: center;
-    width: 80vw;
+    height: 30%;
 }
 
 #container2 {
     background-color: white;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -100%);
     padding: 10px;
     text-align: center;
     padding-right: 50px;
     padding-left: 50px;
-    width: 80vw;
+    height: 40%;
 }
 
 .try {
-    font-size: 1.5vw;
     border: thin solid black;
-    width: 80vw;
     margin-bottom: 0.2vw;
     padding: 0.5vw;
 }
 
 #triesContainer {
-    position: relative;
-    top: -99%;
-    padding: 0.1vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1vw;
 }
 
 #solvedContainer {
@@ -52,12 +51,17 @@ body, html {
     position: relative;
     padding: 10px;
     margin-bottom: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 #gridContainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 1vw;
+    margin-bottom: 1vw;
 }
 
 .grid-item {
@@ -72,23 +76,21 @@ body, html {
 }
 
 #buttons {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 5vw;
     background-color: white;
     border-radius: 2px;
     border-color: black;
     position: relative;
     padding: 20px;
+    height: 15%;
 }
 
 .button {
-    height: 50px;
-    width: 20vw;
+    height: 100%;
+    width: 45%;
     font-weight: bold;
     border: thin solid black;
     color: black;
-    font-size: 1.5vw;
+    margin: 1%;
 }
 
 #shuffleButton  {
@@ -105,12 +107,29 @@ body, html {
 
 @media screen and (max-width: 768px) {
     .solve {
-        font-size: 15px;
+        font-size: 12px;
+        height: 50px;
+    }
+
+    .try {
+        font-size: 11px;
+    }
+
+    .button {
+        font-size: 13px;
     }
 }
 
 @media screen and (min-width: 769px) {
     .solve {
-        font-size: 20px; 
+        font-size: 18px; 
+    }
+
+    .try {
+        font-size: 20px;
+    }
+
+    .button {
+        font-size: 20px;
     }
 }
