--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body, html {
 
 #mainContainer {
     width: 90%;
-    height: 80%;
-    margin: 10% auto;
+    height: 80vh; 
+    margin: 10vh auto 0;
     display: flex;
     flex-direction: column;
 }
