--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body, html {
     margin: 0;
     padding: 0;
-    height: 100%;
-    font-family: "Tahoma";
+    height: 90%;
+    font-family: "Georgia";
 }
 
 #mainContainer {
-    width: 90%;
+    width: 98%;
     height: 80vh; 
     margin: 10vh auto 0;
     display: flex;
@@ -17,14 +17,12 @@ body, html {
     background-color: white;
     padding: 10px;
     text-align: center;
-    height: 30%;
 }
 
 #container2 {
     background-color: white;
     padding: 10px;
     text-align: center;
-    height: 40%;
 }
 
 .try {
@@ -52,6 +50,10 @@ body, html {
     flex-direction: column;
 }
 
+#solvedContainer {
+    width: 100%;
+}
+
 #gridContainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -65,7 +67,7 @@ body, html {
     border: thin solid black;
     display: flex; 
     justify-content: center; 
-    align-items: center; 
+    align-items: center;
 }
 
 #buttons {
@@ -94,15 +96,15 @@ body, html {
     background-color: lightgreen;
 }
 
-#shButton {
+#shareButton {
     background-color: beige;
     margin-top: -1vw;
 }
 
 @media screen and (max-width: 768px) {
     .solve {
-        font-size: 12px;
-        height: 50px;
+        font-size: 14px;
+        height: 70px;
     }
 
     .try {
@@ -116,7 +118,16 @@ body, html {
 
     .grid-item {
         min-width: 50px; 
-        min-height: 30px;
+        min-height: 70px;
+    }
+
+    #container1 {
+        height: 20%;
+    }
+
+    #container2 {
+        width: 95%;
+        height: 50%;
     }
 }
 
@@ -137,5 +148,13 @@ body, html {
     .grid-item {
         min-width: 100px; 
         min-height: 50px;
+    }
+
+    #container1 {
+        height: 30%;
+    }
+
+    #container2 {
+        height: 40%;
     }
 }
