--- a/styles.css
+++ b/styles.css
@@ -6,22 +6,22 @@ body, html {
 }
 
 #mainContainer {
-    width: 98%;
+    width: 99%;
     height: 80vh; 
-    margin: 10vh auto 0;
+    margin: 5vh auto 0;
     display: flex;
     flex-direction: column;
 }
 
 #container1 {
     background-color: white;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
 }
 
 #container2 {
     background-color: white;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
 }
 
@@ -29,6 +29,7 @@ body, html {
     border: thin solid black;
     margin-bottom: 0.2vw;
     padding: 0.5vw;
+    border-radius: 4px;
 }
 
 #triesContainer {
@@ -48,6 +49,7 @@ body, html {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-radius: 6px;
 }
 
 #solvedContainer {
@@ -68,6 +70,7 @@ body, html {
     display: flex; 
     justify-content: center; 
     align-items: center;
+    border-radius: 6px;
 }
 
 #buttons {
@@ -81,19 +84,22 @@ body, html {
 
 .button {
     height: 100%;
-    width: 45%;
+    width: 48%;
     font-weight: bold;
     border: thin solid black;
     color: black;
     margin: 1%;
+    border-radius: 8px;
 }
 
 #shuffleButton  {
     background-color: coral;
+    margin-left: 0px;
 }
 
 #enterButton {
     background-color: lightgreen;
+    margin-right: 0px;
 }
 
 #shareButton {
@@ -109,7 +115,7 @@ body, html {
 
     .try {
         font-size: 9px;
-        width: 40vw;
+        width: 42vw;
     }
 
     .button {
@@ -123,10 +129,11 @@ body, html {
 
     #container1 {
         height: 20%;
+        margin-top: -50px;
     }
 
     #container2 {
-        width: 95%;
+        width: 97%;
         height: 50%;
     }
 }
