--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,30 @@ body, html {
     border-radius: 6px;
 }
 
+#triesInfo {
+    display: flex;
+    justify-content: center; /* Zentriert den Inhalt horizontal */
+    align-items: center; /* Zentriert den Inhalt vertikal */
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#triesCircles {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.try-circle {
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+    border-radius: 50%;
+    margin: 0 5px;
+    background-color: darkgray; /* Graue Farbe für nicht verwendete Versuche */
+}
+
 #buttons {
     background-color: white;
     border-radius: 2px;
@@ -119,7 +143,7 @@ body, html {
     }
 
     .button {
-        font-size: 13px;
+        font-size: 18px;
     }
 
     .grid-item {
