--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ body, html {
     align-items: center; /* Zentriert den Inhalt vertikal */
     text-align: center;
     margin-top: 10px;
+    margin-right: 20px;
 }
 
 #triesCircles {
