--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,8 @@ body, html {
 
 #triesInfo {
     display: flex;
-    justify-content: center; /* Zentriert den Inhalt horizontal */
-    align-items: center; /* Zentriert den Inhalt vertikal */
+    justify-content: center; 
+    align-items: center; 
     text-align: center;
     margin-top: 10px;
     margin-right: 20px;
@@ -86,6 +86,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 20px;
 }
 
 .try-circle {
