--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ body, html {
     border: 1px solid black;
     border-radius: 50%;
     margin: 0 5px;
-    background-color: darkgray; /* Graue Farbe für nicht verwendete Versuche */
+    background-color: darkgray;
 }
 
 #buttons {
@@ -132,6 +132,26 @@ body, html {
     margin-top: -1vw;
 }
 
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-0.5deg); }
+    20% { transform: translate(-3px, 0px) rotate(0.5deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(0.5deg); }
+    50% { transform: translate(-1px, 2px) rotate(-0.5deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-0.5deg); }
+    80% { transform: translate(-1px, -1px) rotate(0.5deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-0.5deg); }
+}
+
+.shake {
+    animation: shake 0.2s;
+    animation-iteration-count: 1;
+}
+
+/* extra stylings specifically for mobile devices */ 
 @media screen and (max-width: 768px) {
     .solve {
         font-size: 14px;
