--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@ body, html {
     margin-bottom: 0.2vw;
     padding: 0.5vw;
     border-radius: 4px;
+    position: relative;
+    transition: transform 0.5s ease;
 }
 
 #triesContainer {
@@ -134,16 +136,16 @@ body, html {
 
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-0.5deg); }
-    20% { transform: translate(-3px, 0px) rotate(0.5deg); }
+    10% { transform: translate(-1px, -2px) rotate(-0.25deg); }
+    20% { transform: translate(-3px, 0px) rotate(0.25deg); }
     30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(0.5deg); }
-    50% { transform: translate(-1px, 2px) rotate(-0.5deg); }
+    40% { transform: translate(1px, -1px) rotate(0.25deg); }
+    50% { transform: translate(-1px, 2px) rotate(-0.25deg); }
     60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-0.5deg); }
-    80% { transform: translate(-1px, -1px) rotate(0.5deg); }
+    70% { transform: translate(3px, 1px) rotate(-0.25deg); }
+    80% { transform: translate(-1px, -1px) rotate(0.25deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-0.5deg); }
+    100% { transform: translate(1px, -2px) rotate(-0.25deg); }
 }
 
 .shake {
