--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,42 @@ body, html {
     grid-gap: 1vw;
 }
 
+@keyframes minimize {
+    0% { transform: translateX(-50%) scale(1); }
+    10% { transform: translateX(-50%) scale(0.9); }
+    20% { transform: translateX(-50%) scale(0.8); }
+    30% { transform: translateX(-50%) scale(0.7); }
+    40% { transform: translateX(-50%) scale(0.6); }
+    50% { transform: translateX(-50%) scale(0.5); }
+    60% { transform: translateX(-50%) scale(0.4); }
+    70% { transform: translateX(-50%) scale(0.3); }
+    80% { transform: translateX(-50%) scale(0.2); }
+    90% { transform: translateX(-50%) scale(0.1); }
+    100% { transform: translateX(-50%) scale(0.01); }
+  }
+
+  @keyframes drop {
+    0% { top: -100px; } 
+    100% { top: 0px; } 
+  }
+
+.notification {
+    position: fixed;
+    top: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #444444;
+    color: #FFFFFF;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    animation: drop 0.5s ease forwards
+  }
+
+  .notification.minimize {
+    animation: minimize 0.5s ease forwards; /* Apply the minimize animation */
+  }
+
 .solve {
     font-size: 20px;
     border: thin solid black;
