--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 90%;
-    font-family: "Georgia";
+    font-family: "Helvetica";
 }
 
 #mainContainer {
@@ -69,11 +69,11 @@ body, html {
     padding: 10px 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    animation: drop 0.5s ease forwards
+    animation: drop 0.2s ease forwards;
   }
 
   .notification.minimize {
-    animation: minimize 0.5s ease forwards; /* Apply the minimize animation */
+    animation: minimize 0.2s ease forwards; /* Apply the minimize animation */
   }
 
 .solve {
@@ -171,17 +171,17 @@ body, html {
 }
 
 @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-0.25deg); }
-    20% { transform: translate(-3px, 0px) rotate(0.25deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(0.25deg); }
-    50% { transform: translate(-1px, 2px) rotate(-0.25deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-0.25deg); }
-    80% { transform: translate(-1px, -1px) rotate(0.25deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-0.25deg); }
+    0% { transform: translate(1px, 2px) rotate(0deg); }
+    10% { transform: translate(-1px, -1px) rotate(-0.2deg); }
+    20% { transform: translate(-2px, 0px) rotate(0.2deg); }
+    30% { transform: translate(1px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(0.2deg); }
+    50% { transform: translate(-1px, 1px) rotate(-0.2deg); }
+    60% { transform: translate(-2px, 1px) rotate(0deg); }
+    70% { transform: translate(1px, 1px) rotate(-0.2deg); }
+    80% { transform: translate(-1px, -1px) rotate(0.2deg); }
+    90% { transform: translate(1+2px, 1px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-0.2deg); }
 }
 
 .shake {
@@ -192,7 +192,7 @@ body, html {
 /* extra stylings specifically for mobile devices */ 
 @media screen and (max-width: 768px) {
     .solve {
-        font-size: 14px;
+        font-size: 16px;
         height: 70px;
     }
 
