--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,7 @@ body, html {
     justify-content: center; 
     align-items: center;
     border-radius: 6px;
+    font-size: 15px;
 }
 
 #triesInfo {
