--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,78 @@ body, html {
     flex-direction: column;
 }
 
+/* Modal styles */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4); /* Overlay */
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 5px;
+    text-align: center;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  #loadingScreen {
+    position: fixed;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .loader {
+    border: 4px solid #f3f3f3; /* Light grey */
+    border-top: 4px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+  #loadingScreen p {
+    color: white;
+    font-size: 16px;
+    margin-top: 10px;
+  }
+  
+
 #container1 {
     background-color: white;
     padding: 5px;
@@ -185,6 +257,19 @@ body, html {
 .shake {
     animation: shake 0.2s;
     animation-iteration-count: 1;
+}
+
+#teilenButton {
+    height: 100%;
+    width: 48%;
+    font-weight: bold;
+    font-size: 20px;
+    color: black;
+    margin: 1%;
+    border-radius: 40px;
+    border: thin solid black;
+    background-color: beige;
+    margin-top: 1vw;
 }
 
 /* extra stylings specifically for mobile devices */ 
