--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,15 @@ body, html {
   .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
+    margin-top: 35%;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
     max-width: 600px;
     border-radius: 5px;
     text-align: center;
+    font-size: 24px; /* Increased font size */
+    line-height: 1.6;
   }
   
   .close {
@@ -229,7 +232,7 @@ body, html {
     height: 100%;
     width: 48%;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 28px;
     color: black;
     margin: 1%;
     border-radius: 40px;
