--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,7 @@ body, html {
     font-size: 28px;
     color: black;
     margin: 1%;
+    padding: 10px;
     border-radius: 40px;
     border: thin solid black;
     background-color: beige;
