Improved stylings for desktops and tablets, and made it so the enter and shuffle buttons can no longer be clicked, while it is checking for categories

--- a/styles.css
+++ b/styles.css
@@ -301,4 +301,9 @@ body, html {
     #container2 {
         height: 40%;
     }
+
+    .modal-content {
+        margin: 15% auto;
+        margin-top: 5%;
+      }
 }
