--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,15 @@ body, html {
     margin-top: 1vw;
 }
 
+.flip-message {
+    font-size: 7vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 /* extra stylings specifically for mobile devices */ 
 @media screen and (max-width: 768px) {
     #mainContainer {
@@ -314,4 +323,10 @@ body, html {
         margin: 15% auto;
         margin-top: 5%;
       }
+}
+
+@media only screen and (max-width: 768px) and (orientation: landscape) {
+    .flip-message {
+        display: block;
+    }
 }
