--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ body, html {
 }
 
 #shareButton {
-    background-color: rgb(222, 105, 238);
+    background-color: rgb(231, 198, 235);
     margin-top: -1vw;
 }
 
@@ -232,7 +232,6 @@ body, html {
     height: 100%;
     width: 60%;
     font-weight: bold;
-    font-size: 28px;
     color: black;
     margin: 1%;
     padding: 10px;
@@ -271,6 +270,10 @@ body, html {
         font-size: 18px;
     }
 
+    #teilenButton {
+        font-size: 18px;
+    }
+
     .grid-item {
         font-size: 15px;
         min-width: 50px; 
@@ -304,6 +307,10 @@ body, html {
 
     .button {
         font-size: 20px;
+    }
+
+    #teilenButton {
+        font-size: 24px;
     }
 
     .grid-item {
