--- a/styles.css
+++ b/styles.css
@@ -241,13 +241,17 @@ body, html {
     margin-top: 1vw;
 }
 
-.flip-message {
+.message {
     font-size: 7vh;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+}
+
+#no-puzzle-message {
+    display: none;
 }
 
 /* extra stylings specifically for mobile devices */ 
@@ -333,7 +337,7 @@ body, html {
 }
 
 @media only screen and (max-width: 768px) and (orientation: landscape) {
-    .flip-message {
+    #flip-message {
         display: block;
     }
 }
