Changed font size

--- a/styles.css
+++ b/styles.css
@@ -320,6 +320,7 @@ body, html {
     .grid-item {
         min-width: 50px; 
         min-height: 50px;
+        font-size: 15px;
     }
 
     #container1 {
