--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ body, html {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 1vw;
+    width: 100%;
 }
 
 .grid-item {
