--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,78 @@ body, html {
 #mainContainer {
     width: 99%;
     height: 80vh; 
-    margin: 5vh auto 0;
+    margin: 3vh auto 0;
     display: flex;
     flex-direction: column;
+}
+
+#top-bar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #333;
+    padding: 10px;
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5vh;
+}
+
+.gear-icon {
+    cursor: pointer;
+    font-size: 36px;
+    margin-right: 4vh;
+}
+
+.dark-mode-toggle {
+    display: flex;                   
+    align-items: center;   
+    margin-top: 10vh;      
+    justify-content: space-between;    
+}
+
+.dark-mode-toggle span {
+    margin-right: 10px;                  /* Space between the text and the toggle */
+    font-size: 24px;                     /* Font size for the label */
+    color: inherit;                       /* Inherit color for text */
+}
+
+.toggle-pill {
+    width: 60px;                         /* Width of the toggle pill */
+    height: 30px;                        /* Height of the toggle pill */
+    background-color: white;             /* Default background color */
+    border-radius: 50px;                 /* Make it pill-shaped */
+    position: relative;                   /* Position relative for indicator */
+    cursor: pointer;                      /* Change cursor to pointer */
+    border: 2px solid #ddd;              /* Light border */
+    transition: background-color 0.3s;  /* Smooth transition for background */
+}
+
+.toggle-indicator {
+    width: 30px;                         /* Width of the indicator */
+    height: 30px;                        /* Height of the indicator */
+    background-color: red;               /* Default color when off */
+    border-radius: 50%;                  /* Circular shape */
+    position: absolute;                   /* Absolute positioning for smooth sliding */
+    top: 0;                               /* Align to the top */
+    left: 0;                              /* Align to the left */
+    display: flex;                        /* Flexbox for centering content */
+    justify-content: center;              /* Center content horizontally */
+    align-items: center;                  /* Center content vertically */
+    color: white;                         /* Text color */
+    transition: transform 0.3s, background-color 0.3s; /* Smooth transition */
+}
+
+body.dark-mode .toggle-indicator {
+    background-color: green;              /* Color when dark mode is on */
+    transform: translateX(30px);        /* Move to the left */
+}
+
+body.dark-mode .toggle-pill {
+    background-color: #333;               /* Darker background for the pill in dark mode */
+    border: 2px solid #666;               /* Darker border for the pill */
 }
 
 /* Modal styles */
@@ -55,13 +124,11 @@ body, html {
   }
 
 #container1 {
-    background-color: white;
     padding: 5px;
     text-align: center;
 }
 
 #container2 {
-    background-color: white;
     padding: 5px;
     text-align: center;
 }
@@ -79,6 +146,7 @@ body, html {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1vw;
+    justify-content: space-between;
 }
 
 @keyframes minimize {
@@ -96,13 +164,13 @@ body, html {
   }
 
   @keyframes drop {
-    0% { top: -100px; } 
+    0% { top: -1px; } 
     100% { top: 0px; } 
   }
 
 .notification {
     position: fixed;
-    top: 0px;
+    top: 10vh;
     left: 50%;
     transform: translateX(-50%);
     background-color: #444444;
@@ -178,10 +246,8 @@ body, html {
 }
 
 #buttons {
-    background-color: white;
     border-radius: 2px;
     position: relative;
-    padding: 20px;
     height: 15%;
 }
 
@@ -220,7 +286,7 @@ body, html {
     60% { transform: translate(-2px, 1px) rotate(0deg); }
     70% { transform: translate(1px, 1px) rotate(-0.2deg); }
     80% { transform: translate(-1px, -1px) rotate(0.2deg); }
-    90% { transform: translate(1+2px, 1px) rotate(0deg); }
+    90% { transform: translate(2px, 1px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-0.2deg); }
 }
 
@@ -258,7 +324,7 @@ body, html {
 /* extra stylings specifically for mobile devices */ 
 @media screen and (max-width: 768px) {
     #mainContainer {
-        margin-top: 5vh;
+        margin-top: 8vh;
     }
 
     .solve {
@@ -268,7 +334,6 @@ body, html {
 
     .try {
         font-size: 9px;
-        width: 42vw;
     }
 
     .button {
@@ -298,6 +363,7 @@ body, html {
 
 @media screen and (min-width: 769px) {
     #mainContainer {
+        margin-top: 10vh;
         width: 50%;
     }
 
