--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,6 @@ body, html {
     font-family: "Helvetica";
 }
 
-#mainContainer {
-    width: 99%;
-    height: 80vh; 
-    margin: 1vh auto 0;
-    display: flex;
-    flex-direction: column;
-}
-
 #top-bar {
     display: flex;
     justify-content: flex-end;
@@ -38,87 +30,54 @@ body, html {
 }
 
 .dark-mode-toggle span {
-    margin-right: 10px;                  /* Space between the text and the toggle */
-    font-size: 24px;                     /* Font size for the label */
-    color: inherit;                       /* Inherit color for text */
+    margin-right: 10px;              
+    font-size: 24px;        
+    color: inherit;               
 }
 
 .toggle-pill {
-    width: 60px;                         /* Width of the toggle pill */
-    height: 30px;                        /* Height of the toggle pill */
-    background-color: white;             /* Default background color */
-    border-radius: 50px;                 /* Make it pill-shaped */
-    position: relative;                   /* Position relative for indicator */
-    cursor: pointer;                      /* Change cursor to pointer */
-    border: 2px solid #ddd;              /* Light border */
-    transition: background-color 0.3s;  /* Smooth transition for background */
+    width: 60px;                     
+    height: 30px;              
+    background-color: white;         
+    border-radius: 50px;       
+    position: relative;      
+    cursor: pointer;            
+    border: 2px solid #ddd;      
+    transition: background-color 0.3s; 
 }
 
 .toggle-indicator {
-    width: 30px;                         /* Width of the indicator */
-    height: 30px;                        /* Height of the indicator */
-    background-color: red;               /* Default color when off */
-    border-radius: 50%;                  /* Circular shape */
-    position: absolute;                   /* Absolute positioning for smooth sliding */
-    top: 0;                               /* Align to the top */
-    left: 0;                              /* Align to the left */
-    display: flex;                        /* Flexbox for centering content */
-    justify-content: center;              /* Center content horizontally */
-    align-items: center;                  /* Center content vertically */
-    color: white;                         /* Text color */
-    transition: transform 0.3s, background-color 0.3s; /* Smooth transition */
+    width: 30px;  
+    height: 30px;                
+    background-color: red;     
+    border-radius: 50%;     
+    position: absolute;              
+    top: 0;                  
+    left: 0;                 
+    display: flex;              
+    justify-content: center;        
+    align-items: center;   
+    color: white;  
+    transition: transform 0.3s, background-color 0.3s; 
 }
 
 body.dark-mode .toggle-indicator {
-    background-color: green;              /* Color when dark mode is on */
-    transform: translateX(30px);        /* Move to the left */
+    background-color: green;        
+    transform: translateX(30px);      
 }
 
 body.dark-mode .toggle-pill {
-    background-color: #333;               /* Darker background for the pill in dark mode */
-    border: 2px solid #666;               /* Darker border for the pill */
+    background-color: #333;               
+    border: 2px solid #666;               
 }
 
-/* Modal styles */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4); /* Overlay */
-  }
-  
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    margin-top: 35%;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 60%;
-    max-width: 600px;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 24px; /* Increased font size */
-    line-height: 1.6;
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+#mainContainer {
+    width: 99%;
+    height: 80vh; 
+    margin: 1vh auto 0;
+    display: flex;
+    flex-direction: column;
+}
 
 #container1 {
     padding: 5px;
@@ -145,51 +104,6 @@ body.dark-mode .toggle-pill {
     grid-gap: 1vw;
     justify-content: space-between;
 }
-
-@keyframes minimize {
-    0% { transform: translateX(-50%) scale(1); }
-    10% { transform: translateX(-50%) scale(0.9); }
-    20% { transform: translateX(-50%) scale(0.8); }
-    30% { transform: translateX(-50%) scale(0.7); }
-    40% { transform: translateX(-50%) scale(0.6); }
-    50% { transform: translateX(-50%) scale(0.5); }
-    60% { transform: translateX(-50%) scale(0.4); }
-    70% { transform: translateX(-50%) scale(0.3); }
-    80% { transform: translateX(-50%) scale(0.2); }
-    90% { transform: translateX(-50%) scale(0.1); }
-    100% { transform: translateX(-50%) scale(0.01); }
-  }
-
-  @keyframes drop {
-    0% { top: 0vh; } 
-    10% { top: 1vh; } 
-    20% { top: 2vh; } 
-    30% { top: 3vh; } 
-    40% { top: 4vh; } 
-    50% { top: 5vh; } 
-    60% { top: 6vh; } 
-    70% { top: 7vh; } 
-    80% { top: 8vh; } 
-    90% { top: 9vh; } 
-    100% { top: 10vh; } 
-  }
-
-.notification {
-    position: fixed;
-    top: 10vh;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #444444;
-    color: #FFFFFF;
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    animation: drop 0.5s ease forwards;
-  }
-
-  .notification.minimize {
-    animation: minimize 0.5s ease forwards; /* Apply the minimize animation */
-  }
 
 .solve {
     font-size: 20px;
@@ -277,9 +191,107 @@ body.dark-mode .toggle-pill {
     margin-right: 0px;
 }
 
-#shareButton {
+#resultsButton {
     background-color: rgb(231, 198, 235);
 }
+
+#shareButton {
+    height: 100%;
+    width: 60%;
+    font-weight: bold;
+    color: black;
+    margin: 1%;
+    padding: 10px;
+    border-radius: 40px;
+    border: thin solid black;
+    background-color: beige;
+    margin-top: 1vw;
+}
+
+@keyframes minimize {
+    0% { transform: translateX(-50%) scale(1); }
+    10% { transform: translateX(-50%) scale(0.9); }
+    20% { transform: translateX(-50%) scale(0.8); }
+    30% { transform: translateX(-50%) scale(0.7); }
+    40% { transform: translateX(-50%) scale(0.6); }
+    50% { transform: translateX(-50%) scale(0.5); }
+    60% { transform: translateX(-50%) scale(0.4); }
+    70% { transform: translateX(-50%) scale(0.3); }
+    80% { transform: translateX(-50%) scale(0.2); }
+    90% { transform: translateX(-50%) scale(0.1); }
+    100% { transform: translateX(-50%) scale(0.01); }
+  }
+
+  @keyframes drop {
+    0% { top: 0vh; } 
+    10% { top: 1vh; } 
+    20% { top: 2vh; } 
+    30% { top: 3vh; } 
+    40% { top: 4vh; } 
+    50% { top: 5vh; } 
+    60% { top: 6vh; } 
+    70% { top: 7vh; } 
+    80% { top: 8vh; } 
+    90% { top: 9vh; } 
+    100% { top: 10vh; } 
+  }
+
+.notification {
+    position: fixed;
+    top: 10vh;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #444444;
+    color: #FFFFFF;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    animation: drop 0.5s ease forwards;
+  }
+
+  .notification.minimize {
+    animation: minimize 0.5s ease forwards; 
+  }
+
+  .modal {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    margin-top: 35%;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    max-width: 600px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 24px; 
+    line-height: 1.6;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 @keyframes shake {
     0% { transform: translate(1px, 2px) rotate(0deg); }
@@ -298,19 +310,6 @@ body.dark-mode .toggle-pill {
 .shake {
     animation: shake 0.2s;
     animation-iteration-count: 1;
-}
-
-#teilenButton {
-    height: 100%;
-    width: 60%;
-    font-weight: bold;
-    color: black;
-    margin: 1%;
-    padding: 10px;
-    border-radius: 40px;
-    border: thin solid black;
-    background-color: beige;
-    margin-top: 1vw;
 }
 
 .message {
@@ -345,7 +344,7 @@ body.dark-mode .toggle-pill {
         font-size: 18px;
     }
 
-    #teilenButton {
+    #shareButton {
         font-size: 18px;
     }
 
@@ -385,7 +384,7 @@ body.dark-mode .toggle-pill {
         font-size: 20px;
     }
 
-    #teilenButton {
+    #shareButton {
         font-size: 24px;
     }
 
