--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,12 @@ body, html {
     background-color: #333;
     padding: 10px;
     color: white;
-    width: 100%;
     height: 5vh;
 }
 
 .gear-icon {
     cursor: pointer;
     font-size: 36px;
-    margin-right: 4vh;
 }
 
 .dark-mode-toggle {
@@ -327,6 +325,14 @@ body.dark-mode .toggle-pill {
 
 /* extra stylings specifically for mobile devices */ 
 @media screen and (max-width: 768px) {
+    #topBar {
+        width: 95%;
+    }
+
+    .gear-icon {
+        margin-right: 1vh;
+    }
+
     #mainContainer {
         margin-top: 1vh;
     }
@@ -366,8 +372,16 @@ body.dark-mode .toggle-pill {
 }
 
 @media screen and (min-width: 769px) {
+    #top-bar {
+        width: 100%;
+    }
+
+    .gear-icon {
+        margin-right: 4vh;
+    }
+
     #mainContainer {
-        margin-top: 10vh;
+        margin-top: 3vh;
         width: 50%;
     }
 
