--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,21 @@ body, html {
     font-family: "Helvetica";
 }
 
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f8f9fa;
+    color: #333;
+    font-size: 24px;
+    z-index: 1000;
+}
+
 #top-bar {
     display: flex;
     justify-content: flex-end;
@@ -425,8 +440,3 @@ body.dark-mode .toggle-pill {
       }
 }
 
-@media only screen and (max-width: 768px) and (orientation: landscape) {
-    #flip-message {
-        display: block;
-    }
-}
