--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body, html {
     z-index: 1000;
 }
 
+#mainPage {
+    display: none;
+}
+
 #top-bar {
     display: flex;
     justify-content: flex-end;
